notneeded/simplesite-nodesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplesite-nodeport
  labels:
    app: simplesite
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31080
  selector:
    app: simplesite
    tier: frontend
