notneeded/wordpress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-lb
  labels:
    app: wordpress
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
