notneeded/wordpress-nodesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport
  labels:
    app: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31080
  selector:
    app: wordpress
    tier: frontend
